# ocr-anamnese

./: .gitignore  README.md  main.py  pyproject.toml
src/: anamnese_ai.py  main.py  ocr.py  utils.py
