[project]
name = "ocr-anamnese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "pdf2image>=1.17.0",
    "pypandoc-binary>=1.15",
    "weasyprint>=66.0",
]
